tests/diag/surface-collision.id
use tests/pkg/exporter
use tests/pkg/exporter2
activate Exporter
activate Exporter2
answer x
